-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.1.0-rc1
Steps to reproduce:
- start Creator, go to Tools -> Options -> Android
- set sdk and ndk folders
- go to Build & Run, add a Qt for Android
- hit Apply and check if the kits have been created
- go to Android and remove the entered paths of sdk and ndk folder
- hit Apply and check if the kits are now marked as invalid
- close Settings dialog
- create a new Qt Widgets Application
- android kit(s) are still listed - and checked by default (yes warning at the bottom...)
- if you only select the android kit(s) and no other kit the project will be created, but back on the Edit view you only see the project node inside the navigator and the main.cpp file is opened
For Gerrit Dashboard: QTCREATORBUG-11877 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
82012,1 | Android: Fix updateAutomaticKitList | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |