Android: Fix updateAutomaticKitList

Task-number: QTCREATORBUG-11877
Change-Id: I5fa4b4667c27a7b82addd7845dd504d4eb6108cf
Reviewed-by: Daniel Teske <daniel.teske@digia.com>